--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-native-paper": "^5.0.0-rc.9",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "expo-splash-screen": "~0.17.4"
+    "expo-splash-screen": "~0.17.4",
+    "react-native-reanimated": "~2.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
