--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/material-bottom-tabs": "^6.2.4",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "expo": "~47.0.3",
     "expo-font": "~11.0.1",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.5",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-paper": "^5.0.0-rc.9",
+    "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
-    "expo-splash-screen": "~0.17.4",
-    "react-native-reanimated": "~2.12.0"
+    "react-native-screens": "~3.18.0"
+  },
+  "overrides": {
+    "@react-navigation/material-bottom-tabs": {
+      "react-native-paper": "^5.0.0-rc.9"
+    }
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
