--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-native-paper": "^5.0.0-rc.9",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0"
+    "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0"
   },
   "overrides": {
     "@react-navigation/material-bottom-tabs": {
