--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-updates": "~0.15.5",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-deck-swiper": "^2.0.11",
     "react-native-paper": "^5.0.0-rc.9",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
