--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-navigation/material-bottom-tabs": "^6.2.4",
+    "@react-navigation/material-top-tabs": "^6.3.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "expo": "~47.0.3",
@@ -20,11 +21,13 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-deck-swiper": "^2.0.11",
+    "react-native-pager-view": "6.0.1",
     "react-native-paper": "^5.0.0-rc.9",
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "react-native-tab-view": "^3.3.0"
   },
   "overrides": {
     "@react-navigation/material-bottom-tabs": {
