--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
+    "react-native-size-matters": "^0.4.0",
     "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.3.0"
   },
